v1.1.0/modules/schema/pages/class/SimpleEndDeviceFunction.adoc
= `SimpleEndDeviceFunction`
:toclevels: 4


+++Simple end device function distinguished by 'kind'. Use this class for instances that cannot be represented by another end device function specialisations.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SimpleEndDeviceFunction`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetFunction.adoc[`AssetFunction`]
*** xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]
**** *`SimpleEndDeviceFunction`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<kind,`kind`>>
//| [[slots_table.kind]]<<kind,`kind`>>
| 0..1 +
xref::enumeration/EndDeviceFunctionKind.adoc[`EndDeviceFunctionKind`]
| +++Kind of this function.+++
| _n/a_

| <<EndDevice,`EndDevice`>>
//| [[slots_table.EndDevice]]<<EndDevice,`EndDevice`>>
| 0..1 +
xref::class/EndDevice.adoc[`EndDevice`]
| +++End device that performs this function.+++
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]

| <<Registers,`Registers`>>
//| [[slots_table.Registers]]<<Registers,`Registers`>>
| 0..* +
xref::class/Register.adoc[`Register`]
| +++All registers for quantities metered by this end device function.+++
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the function is enabled.+++
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]

| <<Asset,`Asset`>>
//| [[slots_table.Asset]]<<Asset,`Asset`>>
| 0..1 +
xref::class/Asset.adoc[`Asset`]
| +++Asset on which this function can be performed.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<configID,`configID`>>
//| [[slots_table.configID]]<<configID,`configID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Configuration specified for this function.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<firmwareID,`firmwareID`>>
//| [[slots_table.firmwareID]]<<firmwareID,`firmwareID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Firmware version.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<hardwareID,`hardwareID`>>
//| [[slots_table.hardwareID]]<<hardwareID,`hardwareID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Hardware version.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<password,`password`>>
//| [[slots_table.password]]<<password,`password`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Password needed to access this function.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<programID,`programID`>>
//| [[slots_table.programID]]<<programID,`programID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Name of program.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Asset]
=== `Asset`
+++Asset on which this function can be performed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.Asset,&#10548;>>
--
////


//[discrete]
[#configID]
=== `configID`
+++Configuration specified for this function.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.configID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.configID,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++True if the function is enabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#EndDevice]
=== `EndDevice`
+++End device that performs this function.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.EndDevice`
| Cardinality
| 0..1
| Type
| xref::class/EndDevice.adoc[`EndDevice`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

////
[.text-left]
--
<<slots_table.EndDevice,&#10548;>>
--
////


//[discrete]
[#firmwareID]
=== `firmwareID`
+++Firmware version.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.firmwareID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.firmwareID,&#10548;>>
--
////


//[discrete]
[#hardwareID]
=== `hardwareID`
+++Hardware version.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.hardwareID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.hardwareID,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kind]
=== `kind`
+++Kind of this function.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SimpleEndDeviceFunction.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/EndDeviceFunctionKind.adoc[`EndDeviceFunctionKind`]


|===

////
[.text-left]
--
<<slots_table.kind,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#password]
=== `password`
+++Password needed to access this function.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.password`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.password,&#10548;>>
--
////


//[discrete]
[#programID]
=== `programID`
+++Name of program.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.programID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.programID,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Registers]
=== `Registers`
+++All registers for quantities metered by this end device function.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.Registers`
| Cardinality
| 0..*
| Type
| xref::class/Register.adoc[`Register`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

////
[.text-left]
--
<<slots_table.Registers,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
